test/e2e/features/xds_warming/testdata/backend-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: warming-new
  namespace: kgateway-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: warming-new
  template:
    metadata:
      labels:
        app.kubernetes.io/name: warming-new
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - name: nginx
          image: nginx:1.28.0
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: index
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
      volumes:
        - name: index
          configMap:
            name: warming-new-index
