test/e2e/features/xds_warming/testdata/postrestart-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xds-warming-postrestart
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "xds-warming-postrestart.example.com"
  rules:
    - backendRefs:
        - name: warming-old
          port: 8080
