test/e2e/features/xds_warming/testdata/route-new.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: xds-warming
  namespace: kgateway-base
spec:
  parentRefs:
    - name: gateway
  hostnames:
    - "xds-warming.example.com"
  rules:
    - backendRefs:
        - name: warming-new
          port: 8080
